# energy-transition-tracker

./: .gitignore  .user.yml  README.md  data_exploration.ipynb  dbt_project.yml  main.py  profiles.yml  pyproject.toml
data/: renewable_share_2024.json
models/bronze/: bronze_global_energy_stats.sql  schema.yml
models/gold/: gold_renewable_share_2024.sql
models/silver/: schema.yml  silver_global_energy_stats_clean.sql
scripts/: renewable_share_2024.py
seeds/: .gitkeep
web/: package.json  pnpm-lock.yaml
web/app/: page.tsx
web/components/: choropleth-map.tsx
web/public/data/: renewable_share_2024.json
