[project]
name = "energy-transition-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.12"
dependencies = [
    "dbt-core>=1.11.2",
    "dbt-duckdb>=1.10.0",
    "duckdb>=1.4.3",
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",
    "s3fs>=2026.1.0",
]
